--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "revent"
-version = "0.3.0"
+version = "0.5.0"
 license = "LGPL-3.0"
 description = "Event system for Rust"
 authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
@@ -10,6 +10,8 @@ repository = "https://github.com/BourgondAries/revent.git"
 homepage = "https://github.com/BourgondAries/revent.git"
 
 [dependencies]
+crossbeam = "0.7.3"
+crossbeam-channel = "0.4"
 
 [dev-dependencies]
 criterion = "0.3"
