--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "revent"
-version = "0.11.0"
+version = "0.12.0"
 license = "LGPL-3.0"
 description = "Event system for Rust"
 authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
@@ -11,6 +11,8 @@ homepage = "https://github.com/BourgondAries/revent.git"
 
 [dev-dependencies]
 criterion = "0.3.1"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9"
 
 [[bench]]
 name = "basic"
