--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "revent"
-version = "0.20.1"
+version = "0.20.2"
 license = "LGPL-3.0"
 description = "Event system for Rust"
 authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
@@ -16,4 +16,8 @@ quickcheck_macros = "0.9.1"
 
 [[bench]]
 name = "basic"
+harness = false
+
+[[bench]]
+name = "feed"
 harness = false
